Fix score alignment, disable switch button when run > 0

--- a/resources/scss/_game.scss
+++ b/resources/scss/_game.scss
@@ -12,9 +12,10 @@
     grid-auto-flow: column;
 
     .player {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         gap: .5rem;
         padding: .75rem .75rem 1.25rem;
         border-bottom: 2px solid transparent;
@@ -43,14 +44,13 @@
         font-size: 1.1rem;
         line-height: 1;
         text-align: center;
-        align-self: flex-start;
     }
 
     .score {
         font-size: 3.4rem;
         line-height: 1.1;
         text-align: center;
-        align-self: flex-end;
+        margin-top: auto;
     }
 
     .current-run {
